[gd_scene load_steps=15 format=2]

[ext_resource path="res://art/Pinball/coin_8x8.png" type="Texture" id=1]
[ext_resource path="res://art/Coin/Coin5.png" type="Texture" id=2]
[ext_resource path="res://art/Coin/Coin4.png" type="Texture" id=3]
[ext_resource path="res://art/Coin/Coin8.png" type="Texture" id=4]
[ext_resource path="res://art/Coin/Coin3.png" type="Texture" id=5]
[ext_resource path="res://art/Coin/Coin6.png" type="Texture" id=6]
[ext_resource path="res://art/Coin/Coin2.png" type="Texture" id=7]
[ext_resource path="res://art/Coin/Coin7.png" type="Texture" id=8]
[ext_resource path="res://art/Coin/Coin1.png" type="Texture" id=9]
[ext_resource path="res://scripts/Pinball/coin.gd" type="Script" id=10]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.2
bounce = 0.75

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="CircleShape2D" id=4]
radius = 4.5

[node name="coin" type="RigidBody2D" groups=[
"coin",
]]
input_pickable = true
physics_material_override = SubResource( 1 )
continuous_cd = 2
contacts_reported = 2
angular_velocity = 1.0
applied_force = Vector2( 0, 100 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 2 )
frame = 7
playing = true
offset = Vector2( -0.5, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_coin_body_entered"]
[connection signal="input_event" from="." to="." method="_on_coin_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_coin_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_coin_mouse_exited"]
